--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -20,7 +20,7 @@
 
 .main-explain-area {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background: #eee;
+  background: #000000;
   padding: 1.25rem 0.9375rem;
 }
 
